--- a/express-on-ecs/Dockerfile
+++ b/express-on-ecs/Dockerfile
@@ -1,13 +1,24 @@
+# --- Build Stage ---
+FROM node:23-slim AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+# --- Production Stage ---
 FROM node:23-slim
 
 WORKDIR /app
 
 COPY package*.json ./
+RUN npm install --omit=dev
 
-RUN npm install
+COPY --from=builder /app/dist ./dist
 
-COPY . .
+EXPOSE 3000
 
-EXPOSE 5123
-
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
